# python_package_template

./: README.md  cookiecutter.json
{{cookiecutter.__project_slug}}/: README.md  pyproject.toml
{{cookiecutter.__project_slug}}/docs/: api.rst  conf.py  index.rst
{{cookiecutter.__project_slug}}/script/: ci.ps1
{{cookiecutter.__project_slug}}/src/{{cookiecutter.__project_slug}}/: __init__.py
